# angstrom

./: '  .dockerignore  .gitignore  .gitmodules  10_EXECUTION_LAYER.md  11_BUNDLE_DATA_FLOW.md  12_POOL_SIM_ABSTRACTION.md  1_ANGSTROM_OVERVIEW.md  2_RUST_INFRASTRUCTURE_CHANGES.md  3_AMM_COMPARISON_ANALYSIS.md  4_RUST_INFRASTRUCTURE_CHANGES_REVISED.md  5_ANGSTROM_VISUAL_FLOWS.md  6_TOB_BID_PARAMETER_EXPLANATION.md  7_RUST_CHANGES_COMPREHENSIVE.md  8_RUST_CRATES_MODULAR_DESIGN.md  9_DETAILED_MULTI_AMM_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  hi  justfile  reth1.service  reth3.service  rust-toolchain.toml  rustfmt.toml  taplo.toml  test.txt
contracts/: out.txt  (+4 more)
crates/amms/: Cargo.toml  README.md
crates/amms/src/: lib.rs
crates/angstrom-net/: Cargo.toml
crates/angstrom-net/src/: builder.rs  cache.rs  eth_network_builder.rs  lib.rs  manager.rs  network.rs  pool_manager.rs  state.rs  swarm.rs
crates/angstrom-net/src/errors/: strom.rs
crates/angstrom-net/src/peers/: manager.rs  reputation.rs
crates/angstrom-net/src/session/: config.rs  connection_handler.rs  handle.rs  mod.rs  ping.rs  protocol_handler.rs  strom.rs
crates/angstrom-net/src/types/: message.rs  status.rs  version.rs
crates/angstrom-net/tests/: message_propagation.rs  startup.rs
crates/balancer-v3/: Cargo.toml
crates/balancer-v3/src/: lib.rs
crates/balancer-v3/src/balancer/: mod.rs  pool_factory.rs  pool_manager.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: leader_selection.rs  lib.rs  manager.rs  round_state.rs  signer.rs  slot_clock.rs
crates/consensus/src/rounds/: bid_aggregation.rs  finalization.rs  mod.rs  pre_proposal.rs  pre_proposal_aggregation.rs  preproposal_wait_trigger.rs  proposal.rs
crates/eth/: Cargo.toml
crates/eth/src/: handle.rs  manager.rs  telemetry.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: delta_tps.rs  volume_solver.rs
crates/matching-engine/src/: lib.rs  manager.rs
crates/matching-engine/src/book/: mod.rs  order.rs  sort.rs
crates/matching-engine/src/matcher/: binary_search.rs  delta.rs  mod.rs  volume.rs
crates/matching-engine/src/simulation/: amm.rs  orders.rs
crates/matching-engine/src/strategy/: binary_search.rs  mod.rs
crates/matching-engine/tests/: bundle.rs  matching.rs  tob.rs
crates/matching-engine/tests/booklib/: mod.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: consensus.rs  exporter.rs  validation.rs
crates/metrics/src/order_pool/: finalization_pool.rs  limit_pool.rs  order_storage.rs  searcher_pool.rs
crates/order-pool/: Cargo.toml
crates/order-pool/src/: config.rs  finalization_pool.rs  lib.rs  order_indexer.rs  order_storage.rs  order_subscribers.rs  order_tracker.rs  telemetry.rs  validator.rs
crates/order-pool/src/common/: size.rs
crates/order-pool/src/limit/: composable.rs  mod.rs  parked.rs  pending.rs  standard.rs
crates/order-pool/src/searcher/: mod.rs  pending.rs
crates/rpc/: Cargo.toml
crates/rpc/src/api/: cctx.rs  consensus.rs  mod.rs  orders.rs  quoting.rs
crates/rpc/src/impls/: consensus.rs  orders.rs  quoting.rs
crates/rpc/src/types/: mod.rs  quoting.rs  subscriptions.rs
crates/telemetry/: Cargo.toml
crates/telemetry-recorder/: Cargo.toml
crates/telemetry-recorder/src/: lib.rs
crates/telemetry/src/: blocklog.rs  client.rs  lib.rs
crates/telemetry/src/outputs/: log.rs  mod.rs  s3.rs
crates/telemetry/src/snapshot/: builder.rs  mod.rs  pool.rs
crates/telemetry/src/types/: mod.rs  orderpool.rs  updater.rs  validation.rs
crates/types/: Cargo.toml  build.rs
crates/types/src/: block_sync.rs  lib.rs  mev_boost.rs  pair_with_price.rs  reth_db_provider.rs  reth_db_wrapper.rs
crates/types/src/amm/: mod.rs  pool_state.rs  pool_swap.rs  price.rs
crates/types/src/balancer_structure/: mod.rs  pool_state.rs
crates/types/src/consensus/: evidence.rs  mod.rs  pre_prepose.rs  pre_propose_agg.rs  proposal.rs  round_data.rs  slot_clock.rs
crates/types/src/contract_bindings/: mod.rs
crates/types/src/contract_payloads/: angstrom.rs  mod.rs  rewards.rs
crates/types/src/matching/: comparable.rs  composite.rs  debt.rs  match_estimate_response.rs  mod.rs  ray.rs  sqrtprice.rs  tokens.rs
crates/types/src/orders/: fillstate.rs  mod.rs  origin.rs
crates/types/src/primitive/: chain_ext.rs  mod.rs  pool_state.rs  recovered_bundle.rs  rpcs.rs  signer.rs  validation.rs
crates/types/src/sol_bindings/: mod.rs  ray.rs  rpc_orders.rs
crates/types/src/submission/: angstrom.rs  mempool.rs  mev_boost.rs  mod.rs
crates/types/src/testnet/: mod.rs
crates/types/tests/: angstrom.rs  bundle.rs  math.rs  orders.rs
crates/uniswap-v4/: Cargo.toml  build.rs
crates/uniswap-v4/src/: lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs  telemetry.rs  validator.rs
testing-tools/: Cargo.toml
testing-tools/src/: lib.rs  utils.rs
testing-tools/src/agents/: mod.rs
testing-tools/src/anvil_state_provider/: anvil_cleanser.rs  initializer.rs  mod.rs  rpc_provider.rs  state_provider.rs  state_provider_factory.rs  utils.rs
testing-tools/src/contracts/: anvil.rs  mod.rs
testing-tools/src/controllers/: mod.rs  state_lock.rs  utils.rs
testing-tools/src/mocks/: canon_state.rs  consensus.rs  eth_events.rs  matching_engine.rs  network_events.rs  validator.rs
testing-tools/src/network/: consensus_future.rs  eth_peer.rs  mod.rs  strom_peer.rs
testing-tools/src/order_generator/: mod.rs  order_builder.rs  pool_order_generator.rs
testing-tools/src/order_pool/: mod.rs
testing-tools/src/providers/: anvil_cleanser.rs  anvil_provider.rs  anvil_submission.rs  block_provider.rs  initializer.rs  mod.rs  rpc_provider.rs  state_provider.rs  utils.rs
testing-tools/src/replay/: fake_network.rs  runner.rs
testing-tools/src/testnet_controllers/: config.rs  state_lock.rs  state_machine.rs  testnet.rs  utils.rs
testing-tools/src/type_generator/: amm.rs  book.rs
testing-tools/src/types/: block_sync.rs  handles.rs  hooks.rs  initial_state.rs  mod.rs  node_config.rs  traits.rs
testing-tools/src/validation/: mod.rs
(+1125 files in other folders)
