[package]
name = "testing-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom.workspace = true
angstrom-amm-quoter.workspace = true
angstrom-eth.workspace = true
angstrom-network.workspace = true
angstrom-rpc.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
consensus.workspace = true
matching-engine.workspace = true
order-pool.workspace = true
pade.workspace = true
rayon = "1"
uniswap-v4.workspace = true
validation.workspace = true
reth-codecs.workspace = true
reth-network-api.workspace = true
reth-tasks.workspace = true
alloy-rpc-types.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
reth-eth-wire.workspace = true
alloy = { workspace = true, features = ["rpc-types-anvil"] }
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
alloy-chains.workspace = true
itertools.workspace = true
reth-chainspec.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
reth-node-ethereum.workspace = true
reth-node-types.workspace = true
reth-revm.workspace = true
revm.workspace = true
reth-discv4 = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true
reth-network = { workspace = true, features = ["test-utils"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reth-db.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
tokio.workspace = true
tokio-stream.workspace = true
enr = { workspace = true, features = ["serde", "k256"] }
rand.workspace = true
rand_chacha = "0.3"
rand_distr.workspace = true
secp256k1.workspace = true
serial_test.workspace = true
tempfile.workspace = true
clap = { workspace = true, features = ["derive"] }
create3 = { git = "https://github.com/AmanRaj1608/create3" }
eyre.workspace = true
parking_lot.workspace = true
uniswap_v3_math.workspace = true

[features]
default = []
reth-db-dep-tests = []
