[package]
name = "amms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tokio.workspace = true
uniswap-v4.workspace = true
balancer-v3.workspace = true
