[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-metrics.workspace = true
uniswap-v4.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bitmaps.workspace = true
futures.workspace = true
hex-literal.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
reth-metrics.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
angstrom-network.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
eyre.workspace = true
matching-engine.workspace = true
order-pool.workspace = true
pade.workspace = true
tokio-stream.workspace = true
validation.workspace = true

[dev-dependencies]
dashmap.workspace = true
testing-tools.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
