[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
itertools.workspace = true
pade.workspace = true
futures.workspace = true
futures-util.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
alloy.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
testing-tools.workspace = true
