[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy.workspace = true
angstrom-types.workspace = true
anyhow.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
pade.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
testing-tools.workspace = true
