[package]
name = "angstrom-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-types.workspace = true
eyre.workspace = true
hyper = { version = "1.6.0", features = ["server"] }
jsonrpsee-server = "0.25.1"
metrics.workspace = true
metrics-exporter-prometheus = "0.16.2"
metrics-process = "1"
metrics-util = "0.20.0"
prometheus = "0"
tokio = { workspace = true, features = ["full", "tracing"] }
tower = "0.5.2"
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
