[package]
name = "angstrom-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-amm-quoter.workspace = true
angstrom-network.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
consensus.workspace = true
order-pool.workspace = true
tokio-stream.workspace = true
validation.workspace = true
reth-metrics = { workspace = true, features = ["common"] }
reth-primitives.workspace = true
reth-tasks.workspace = true
bincode = { workspace = true }
strum = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
async-trait.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros", "ws-client"] }
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hyper = "1"
tower = { version = "0", features = ["full"] }
tower-http = { version = "0", features = ["full"] }

[dev-dependencies]
rand = "0"
tokio = { workspace = true, features = ["full", "tracing"] }

[features]
default = ["client"]
client = []
