[package]
name = "telemetry-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
angstrom-types.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
serde.workspace = true
serde_cbor.workspace = true
tokio.workspace = true
tracing.workspace = true
